--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,38 @@
-.App {
+.section {
+  display: flex;
+}
+.wrapper {
+  padding-left: 10%;
+}
+.sidebar {
+  width: 25%;
+
+  text-align: center;
+  background-color: rgb(0, 187, 255);
+}
+.main-content {
+  padding: 8px;
+  background-color: rgb(155, 158, 162);
+}
+.main-content-header {
+  border-bottom: 1px solid gainsboro;
+}
+
+.main-forms {
+  padding: 18px;
+}
+.main-forms div {
+  margin-bottom: 10px;
+}
+label {
+  padding: 18px;
+}
+input {
+  padding: 8px;
+  margin: 2px;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +69,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
